Resolves: tdf#139934 always apply cellXfs xf explicits (tdf#123139 related)

Change-Id: Id1e12ee8677a25a645bfd53b4968a17c9a1eabe5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146599
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit 909a25d30b09ebd3a023105a9c3cc4d20add094a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146533
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>